// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField rendering renders expected elements 1`] = `
<div
  className="ToggleField"
>
  <div
    className="ToggleField__label"
  >
    <Label
      id="test-label"
      text="Test"
    />
  </div>
  <Toggle
    aria-labelledby="test-label"
    checked={true}
    className="ToggleField__field"
    disabled={true}
    id="test"
    onChange={[Function]}
  />
</div>
`;

exports[`ToggleField rendering renders expected elements when className is set 1`] = `
<div
  className="ToggleField TestClass"
>
  <div
    className="ToggleField__label"
  >
    <Label
      id="test-label"
      text="Test"
    />
  </div>
  <Toggle
    aria-labelledby="test-label"
    checked={true}
    className="ToggleField__field"
    id="test"
    onChange={[Function]}
  />
</div>
`;
